Recurso de color e logo
Aplicação do recurso de cor nas linhas do server e do cliente, colocação do logo no titulo do server e do cliente.

--- a/README
+++ b/README
@@ -11,8 +11,8 @@ Virtual:
     $ conda update conda
     $ conda info -e 
 
-    $ source activate <seu_env_nome>
-    $ source deactivate 
+    $ conda activate <seu_env_nome>
+    $ conda deactivate 
 
     $ conda remove -n <seu_env_nome> -all
 
